@@ -222,14 +222,21 @@ setClass(Class = "VariableFrame",
         scores          = "list",
         has_missings    = "logical", 
         whichNA         = "list",
-        jointtransf     = "matrix",
         nobs            = "integer",
         ninputs         = "integer")
 )
 
+### joint handling of variables only necessary for responses
+setClass(Class = "ResponseFrame",
+    representation = representation(
+        test_trafo = "matrix",
+        predict_trafo = "matrix"
+    ), contains = "VariableFrame"
+)   
+
 setClass(Class = "LearningSample",
     representation = representation(
-        responses = "VariableFrame",
+        responses = "ResponseFrame",
         inputs    = "VariableFrame",
         weights   = "numeric",
         nobs      = "integer",
