@@ -37,7 +37,7 @@ void C_splitnode(SEXP node, SEXP learnsample, SEXP control) {
     SET_VECTOR_ELT(node, S3_LEFT, leftnode = allocVector(VECSXP, NODE_LENGTH));
     C_init_node(leftnode, nobs, 
         get_ninputs(learnsample), get_maxsurrogate(get_splitctrl(control)),
-        ncol(get_jointtransf(GET_SLOT(learnsample, PL2_responsesSym))));
+        ncol(get_predict_trafo(GET_SLOT(learnsample, PL2_responsesSym))));
     leftweights = REAL(S3get_nodeweights(leftnode));
 
     /* set up memory for the right daughter */
@@ -45,7 +45,7 @@ void C_splitnode(SEXP node, SEXP learnsample, SEXP control) {
                    rightnode = allocVector(VECSXP, NODE_LENGTH));
     C_init_node(rightnode, nobs, 
         get_ninputs(learnsample), get_maxsurrogate(get_splitctrl(control)),
-        ncol(get_jointtransf(GET_SLOT(learnsample, PL2_responsesSym))));
+        ncol(get_predict_trafo(GET_SLOT(learnsample, PL2_responsesSym))));
     rightweights = REAL(S3get_nodeweights(rightnode));
 
     /* split according to the primary split */
